--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.1",
     "bootstrap3": "^3.3.5",
     "classnames": "^2.2.6",
+    "cross-env": "^7.0.2",
     "formsy-react": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
